--- a/css/index.css
+++ b/css/index.css
@@ -17,23 +17,36 @@ h1{
     justify-content: space-between;
     height: 100vh;
 }
-#logo{
+.logo{
     width: 70px;
+    margin-left: 100px;
     height: 70px;
-    margin-left: 20px;
 }
 .header{
-    margin-top: 20px;
     display: flex;
-    justify-content: space-around;
+    background: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 100%;
+    position: fixed;
+    border-radius: 0 0 20px 20px;
+    justify-content: space-between;
 }
 .header_wrapper{
     width: 50%;
     display: flex;
     flex-wrap: wrap;
     margin-top: auto;
+    margin-right: 250px;
     margin-bottom: auto;
     justify-content: space-around;
+}
+.line{
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 1px;
+    background: black;
 }
 .header_link{
     font-size: 25px;
@@ -41,7 +54,8 @@ h1{
     text-decoration: none;
 }
 .header_link:hover{
-    text-decoration: underline black;
+    border-bottom: 2px solid black;
+    transition: all .1s;
 }
 .title{
     margin-left: auto;
@@ -57,4 +71,102 @@ h1{
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
+}
+h2{
+    margin-right: auto;
+    margin-left: auto;
+    font-size: 60px;
+}
+.about-item{
+    height: 400px;
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 20px;
+    flex-wrap: wrap;
+    padding-left: 20px;
+}
+.about1{
+    margin-bottom: 10px;
+}
+.about-item-text{
+    font-size: 25px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+.about-item-image{
+    width: 300px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+.about2{
+    flex-direction: row-reverse;
+}
+.teachers-list{
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-right: auto;
+    margin-left: auto;
+}
+.teacher-item{
+    width: 400px;
+    height: 700px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    background: white;
+    flex-direction: column;
+    overflow: hidden;
+    border-radius: 10px;
+}
+.teacher-item-image{
+    width: 400px;
+    margin: 0 auto;
+}
+h3{
+    font-size: 35px;
+    text-align: center;
+}
+h4{
+    font-size: 22px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 20px;
+}
+.teacher-item:hover{
+    transform: scale(1.1);
+    transition: all 0.5s;
+}
+.footer{
+    background: white;
+    border-radius: 20px 20px 0 0;
+    margin-right: 20px;
+    margin-left: 20px;
+    flex-direction: row;
+    display: flex;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    justify-content: space-between;
+}
+.footer_wrapper{
+    flex-direction: column;
+    width: auto;
+}
+.logo_footer{
+    margin-top: auto;
+    margin-bottom: auto;
+}
+.links{
+    width: 500px;
+}
+.links img{
+    width: 60px;
+    height: 60px;
 }
