--- a/css/index.css
+++ b/css/index.css
@@ -1,28 +1,33 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
-body{
+
+body {
     background: url("../images/background.jpeg") repeat center center;
 }
-h1{
+
+h1 {
     font-size: 70px;
 }
 
-.container{
+.container {
     display: flex;
     flex-direction: column;
 }
-.main{
+
+.main {
     justify-content: space-between;
     height: 100vh;
 }
-.logo{
+
+.logo {
     width: 70px;
     margin-left: 100px;
     height: 70px;
 }
-.header{
+
+.header {
     display: flex;
     background: white;
     padding-top: 10px;
@@ -32,7 +37,8 @@ h1{
     border-radius: 0 0 20px 20px;
     justify-content: space-between;
 }
-.header_wrapper{
+
+.header_wrapper {
     width: 50%;
     display: flex;
     flex-wrap: wrap;
@@ -41,44 +47,52 @@ h1{
     margin-bottom: auto;
     justify-content: space-around;
 }
-.line{
+
+.line {
     width: 900px;
     margin-left: auto;
     margin-right: auto;
     height: 1px;
     background: black;
 }
-.header_link{
+
+.header_link {
     font-size: 25px;
     color: black;
     text-decoration: none;
 }
-.header_link:hover{
+
+.header_link:hover {
     border-bottom: 2px solid black;
     transition: all .1s;
 }
-.title{
+
+.title {
     margin-left: auto;
     margin-right: auto;
 }
-.subtitle{
+
+.subtitle {
     margin-top: 20px;
     text-align: center;
 }
-#circle{
+
+#circle {
     width: 70px;
     height: 70px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
 }
-h2{
+
+h2 {
     margin-right: auto;
     margin-left: auto;
     font-size: 60px;
+    text-align: center;
 }
-.about-item{
-    height: 400px;
+
+.about-item {
     width: 70%;
     display: flex;
     justify-content: space-between;
@@ -88,23 +102,28 @@ h2{
     flex-wrap: wrap;
     padding-left: 20px;
 }
-.about1{
+
+.about1 {
     margin-bottom: 10px;
 }
-.about-item-text{
+
+.about-item-text {
     font-size: 25px;
     margin-top: auto;
     margin-bottom: auto;
 }
-.about-item-image{
+
+.about-item-image {
     width: 300px;
     margin-top: auto;
     margin-bottom: auto;
 }
-.about2{
+
+.about2 {
     flex-direction: row-reverse;
 }
-.teachers-list{
+
+.teachers-list {
     width: 80%;
     display: flex;
     flex-wrap: wrap;
@@ -114,7 +133,8 @@ h2{
     margin-right: auto;
     margin-left: auto;
 }
-.teacher-item{
+
+.teacher-item {
     width: 400px;
     height: 700px;
     display: flex;
@@ -126,25 +146,30 @@ h2{
     overflow: hidden;
     border-radius: 10px;
 }
-.teacher-item-image{
+
+.teacher-item-image {
     width: 400px;
     margin: 0 auto;
 }
-h3{
+
+h3 {
     font-size: 35px;
     text-align: center;
 }
-h4{
+
+h4 {
     font-size: 22px;
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 20px;
 }
-.teacher-item:hover{
+
+.teacher-item:hover {
     transform: scale(1.1);
     transition: all 0.5s;
 }
-.footer{
+
+.footer {
     background: white;
     border-radius: 20px 20px 0 0;
     margin-right: 20px;
@@ -155,28 +180,33 @@ h4{
     padding-bottom: 10px;
     justify-content: space-between;
 }
-.footer_wrapper{
+
+.footer_wrapper {
     flex-direction: column;
     width: auto;
 }
-.logo_footer{
+
+.logo_footer {
     margin-top: auto;
     margin-bottom: auto;
 }
-.links{
+
+.links {
     width: 500px;
 }
-.links img{
+
+.links img {
     width: 60px;
     height: 60px;
 }
-.formula_title{
+
+.formula_title {
     margin-left: 20px;
     margin-top: 20px;
     text-align: left;
 }
 
-.calculator_volume{
+.calculator_volume {
     width: 80%;
     display: flex;
     margin: 100px auto 20px;
@@ -185,14 +215,16 @@ h4{
     overflow: hidden;
     border-radius: 10px;
 }
-.calculator_values_volume{
+
+.calculator_values_volume {
     margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     margin-bottom: 20px;
 }
-input, select{
+
+input, select {
     width: 300px;
     padding-left: 10px;
     margin-bottom: 10px;
@@ -203,7 +235,7 @@ input, select{
     border: none;
 }
 
-.calculator_square{
+.calculator_square {
     width: 80%;
     display: flex;
     margin: 100px auto 20px;
@@ -212,14 +244,16 @@ input, select{
     overflow: hidden;
     border-radius: 10px;
 }
-.calculator_values_square{
+
+.calculator_values_square {
     margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     margin-bottom: 20px;
 }
-.calculator_speed{
+
+.calculator_speed {
     width: 80%;
     display: flex;
     margin: 100px auto 20px;
@@ -228,14 +262,16 @@ input, select{
     overflow: hidden;
     border-radius: 10px;
 }
-.calculator_values_speed{
+
+.calculator_values_speed {
     margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     margin-bottom: 20px;
 }
-.calculator_temp{
+
+.calculator_temp {
     width: 80%;
     display: flex;
     margin: 100px auto 20px;
@@ -244,49 +280,85 @@ input, select{
     overflow: hidden;
     border-radius: 10px;
 }
-.calculator_values_temp{
+
+.calculator_values_temp {
     margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     margin-bottom: 20px;
 }
-.lessons{
+
+.lessons {
     flex-direction: column;
 }
-.lesson_item:first-child{
+
+.lesson_item:first-child {
     margin-top: 120px;
 }
+
 @keyframes animation_show {
-    0%{
+    0% {
         height: 100px;
     }
-    100%{
-        height: 500px;
+    99% {
+        height: 1200px;
+    }
+    100% {
+        height: auto;
     }
 }
+
+#lesson_dropdown {
+    background: white;
+    border-radius: 5px;
+    border: 1px solid lightgray;
+    display: none;
+    box-shadow: 3px 2px 20px black;
+    flex-direction: column;
+    position: absolute;
+}
+#lesson_dropdown a{
+    text-decoration: none;
+    margin-left: 10px;
+    color: black;
+    font-size: 25px;
+    margin-right: 10px;
+    margin-top: 20px;
+}
+#lesson_dropdown a:last-child{
+    margin-bottom: 20px;
+}
+
 @keyframes animation_hide {
-    100%{
+    0% {
+        height: auto;
+    }
+    1% {
+        height: 1200px;
+    }
+    100% {
         height: 100px;
     }
-    0%{
-        height: 500px;
-    }
 }
-.lesson_item_enable{
+
+.lesson_item_enable {
     animation: animation_show;
     animation-fill-mode: forwards;
     animation-duration: 1s;
 }
-.lesson_item_disable{
+
+.lesson_item_disable {
     animation: animation_hide;
     animation-fill-mode: forwards;
     animation-duration: 1s;
 }
-.lesson_item:hover{
+
+.lesson_item:hover {
     cursor: pointer;
 }
-.lesson_item{
+
+.lesson_item {
     width: 90%;
     background: antiquewhite;
     margin-bottom: 20px;
@@ -296,28 +368,83 @@ input, select{
     margin-left: auto;
     height: 100px;
 }
-.lesson_item_title{
+
+.lesson_item_title {
     display: flex;
     height: 100px;
     flex-direction: row;
 }
-.title_lesson{
+
+.title_lesson {
     margin-left: 20px;
     margin-right: 0;
     margin-top: auto;
     margin-bottom: auto;
 }
-.more{
+
+.more {
     margin-left: 20px;
     width: 40px;
     height: 40px;
     margin-top: auto;
     margin-bottom: auto;
 }
-.lesson_video{
+
+.lesson_video {
     margin-left: 20px;
 }
-.lesson_text{
+
+.lesson_text {
     margin-top: 10px;
     margin-left: 20px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.lesson_text img {
+    width: 500px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+@media (max-width: 1230px) {
+    .about2{
+        flex-direction: row;
+    }
+    .about-item-text, .about-item-image{
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
+#burger_button{
+    display: none;
+}
+@media (max-width: 800px) {
+    .header_wrapper{
+        display: none;
+    }
+    #burger_button{
+        width: 50px;
+        margin-bottom: auto;
+        margin-right: 60px;
+        margin-top: auto;
+        display: block;
+        height: 50px;
+    }
+}
+@media (max-width: 1110px){
+    .lesson_video{
+        margin-right: auto;
+        display: block;
+        margin-left: auto;
+    }
+}
+@media (max-width: 700px) {
+    .lesson_video{
+        width: 400px;
+    }
+    .lesson_text img{
+        width: 400px;
+    }
 }
