--- a/css/index.css
+++ b/css/index.css
@@ -398,7 +398,7 @@ input, select {
     margin-top: 10px;
     margin-left: 20px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
 }
 
@@ -417,8 +417,45 @@ input, select {
         margin-left: auto;
     }
 }
+.modal_nav_wrapper{
+    display: flex;
+    height: 40vh;
+    margin: auto;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.modal_nav{
+    width: 100%;
+    height: 0;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    background: lightgray;
+    overflow: hidden;
+    z-index: 1000;
+}
+.modal_nav_show{
+    height: 100vh;
+    transition: all .6s;
+}
+.modal_nav_hide{
+    height: 0;
+    transition: all .6s;
+}
 #burger_button{
     display: none;
+}
+#close{
+    width: 50px;
+    height: 50px;
+    margin-left: auto;
+    margin-right: 20px;
+    margin-top: 20px;
+}
+.header_mobile_link{
+    margin-right: auto;
+    margin-left: auto;
+    font-size: 40px;
 }
 @media (max-width: 800px) {
     .header_wrapper{
@@ -439,6 +476,9 @@ input, select {
         display: block;
         margin-left: auto;
     }
+    .line{
+        width: 80%;
+    }
 }
 @media (max-width: 700px) {
     .lesson_video{
@@ -447,4 +487,24 @@ input, select {
     .lesson_text img{
         width: 400px;
     }
+}
+.header_wrapper_icon{
+    display: flex;
+    margin-right: 0;
+}
+.text_item{
+    display: flex;
+}
+.text_item_title{
+    margin: 0;
+}
+.text_item p{
+    margin-top: auto;
+    margin-bottom: auto;
+}
+.text_item_container{
+    margin-left: 10px;
+    margin-top: 10px;
+    padding: 10px;
+    border: 1px solid black;
 }
